<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="it.matteosilvestro.quizproject.QuizActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!-- Paradox #1 -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/margin">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_narrow"
                android:text="@string/paradox_1"
                android:textSize="@dimen/paradox_title"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/paradox_1_body"
                android:textSize="@dimen/body_size" />

            <RadioGroup
                android:id="@+id/paradox_1_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_narrow"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/paradox_1_radio_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/paradox_1_ans_1" />

                <RadioButton
                    android:id="@+id/paradox_1_radio_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/paradox_1_ans_2" />

                <RadioButton
                    android:id="@+id/paradox_1_radio_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/paradox_1_ans_3" />

            </RadioGroup>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="@dimen/margin"
            android:layout_marginRight="@dimen/margin"
            android:background="@android:color/darker_gray" />

        <!-- Paradox #2 -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/margin">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_narrow"
                android:text="@string/paradox_2"
                android:textSize="@dimen/paradox_title"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/paradox_2_body"
                android:textSize="@dimen/body_size" />

            <RadioGroup
                android:id="@+id/paradox_2_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_narrow"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/paradox_2_radio_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/paradox_2_ans_1" />

                <RadioButton
                    android:id="@+id/paradox_2_radio_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/paradox_2_ans_2" />

                <RadioButton
                    android:id="@+id/paradox_2_radio_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/paradox_2_ans_3" />

            </RadioGroup>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="@dimen/margin"
            android:layout_marginRight="@dimen/margin"
            android:background="@android:color/darker_gray" />

        <!-- Paradox #3 -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/margin">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_narrow"
                android:text="@string/paradox_3"
                android:textSize="@dimen/paradox_title"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/paradox_3_body"
                android:textSize="@dimen/body_size" />

            <RadioGroup
                android:id="@+id/paradox_3_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_narrow"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/paradox_3_radio_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/paradox_3_ans_1" />

                <RadioButton
                    android:id="@+id/paradox_3_radio_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/paradox_3_ans_2" />

                <RadioButton
                    android:id="@+id/paradox_3_radio_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/paradox_3_ans_3" />

            </RadioGroup>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="@dimen/margin"
            android:layout_marginRight="@dimen/margin"
            android:background="@android:color/darker_gray" />

        <!-- Paradox #4 -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/margin">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_narrow"
                android:text="@string/paradox_4"
                android:textSize="@dimen/paradox_title"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/paradox_4_body"
                android:textSize="@dimen/body_size" />


            <CheckBox
                android:id="@+id/paradox_4_choice_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/paradox_4_ans_1" />

            <CheckBox
                android:id="@+id/paradox_4_choice_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/paradox_4_ans_2" />

            <CheckBox
                android:id="@+id/paradox_4_choice_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/paradox_4_ans_3" />

            <CheckBox
                android:id="@+id/paradox_4_choice_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/paradox_4_ans_4" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="@dimen/margin"
            android:layout_marginRight="@dimen/margin"
            android:background="@android:color/darker_gray" />

        <!-- Paradox #5 -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/margin">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_narrow"
                android:text="@string/paradox_5"
                android:textSize="@dimen/paradox_title"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/paradox_5_body"
                android:textSize="@dimen/body_size" />

            <EditText
                android:id="@+id/paradox_5_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapSentences"
                android:hint="@string/paradox_5_hint" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="@dimen/margin"
            android:layout_marginRight="@dimen/margin"
            android:background="@android:color/darker_gray" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/margin"
            android:layout_marginTop="@dimen/margin"
            android:onClick="sendQuiz"
            android:text="@string/confirm" />

    </LinearLayout>
</ScrollView>