<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="it.matteosilvestro.quizproject.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_narrow"
        android:layout_marginLeft="@dimen/margin"
        android:layout_marginTop="@dimen/margin"
        android:text="@string/eula_title"
        android:textSize="@dimen/title_size"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin"
            android:layout_marginRight="@dimen/margin"
            android:text="@string/eula_text"
            android:textSize="@dimen/body_size" />

    </ScrollView>

    <CheckBox
        android:id="@+id/checkbox_accept"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin"
        android:layout_marginTop="@dimen/margin"
        android:text="@string/eula_accept" />

    <CheckBox
        android:id="@+id/checkbox_not_accept"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin"
        android:text="@string/eula_not_accept" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        android:layout_marginLeft="@dimen/margin"
        android:layout_marginRight="@dimen/margin"
        android:layout_marginTop="@dimen/margin_narrow"
        android:layout_marginBottom="@dimen/margin_narrow"></View>

    <CheckBox
        android:id="@+id/checkbox_captcha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/captcha"
        android:layout_marginLeft="@dimen/margin"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/margin"
        android:layout_marginTop="@dimen/margin"
        android:text="@string/eula_continue"
        android:onClick="startQuiz"/>

</LinearLayout>
